# knowndict

./: CHANGELOG  CMakeLists.txt  KnownDict.apparmor  LICENSE  README.md  clickable.yaml  manifest.json.in
app/: CMakeLists.txt  KnownDict.desktop.in  PageEnablePreinstalled.qml  PageInfo.qml
app/components/: AnimationUp.qml  CMakeLists.txt  OnlineDict.qml  SettingsItem.qml
app/dict/: CMakeLists.txt  ContentPickerDialog.qml
app/images/: CMakeLists.txt
app/js/: CMakeLists.txt
app/pre_installed/: CMakeLists.txt
app/pre_installed/langdao_ce/: CMakeLists.txt
app/pre_installed/langdao_ec/: CMakeLists.txt
app/search/: CMakeLists.txt  PageOnlineDetail.qml
po/: knowndict.hisacro.pot  localization_readme.md  nl.po  zh_CN.po
src/: CMakeLists.txt  database.cpp  database.h  dict.cpp  dict.h  dictcenter.cpp  dictcenter.h  dictdatablock.cpp  dictdatablock.h  dictindex.cpp  dictindex.h  dictinfo.cpp  dictinfo.h  main.cpp  youdaoapi.cpp  youdaoapi.h
